# PiBlaster

./: .gitignore  LICENSE  README.md
Android/PiBlaster/: PiBlaster.pro  images.qrc  main.cpp  qml.qrc
Android/PiBlaster/android-sources/: AndroidManifest.xml
Android/PiBlaster/qml/PiBlaster/: main.qml
Android/PiBlaster/qml/PiBlaster/browse/: Browse.qml  BrowseList.qml  BrowseModel.qml
Android/PiBlaster/rfcommclient/: rfcommclient.h
Android/PiBlaster/rfcommclientdummy/: rfcommclient.h
Android/PiBlaster/src/: DummyMessages.cpp  Helpers.cpp  Helpers.h  QtQuick2ApplicationViewer.cpp  QtQuick2ApplicationViewer.h  QtQuick2ApplicationViewer.pri  RFCommClient.cpp  RFCommClient.h  RFCommClientDummy.cpp  RFCommMaster.cpp  RFCommMaster.h  RFCommMessageObject.h  RFCommRecvThread.cpp  RFCommRecvThread.h  RFCommSendThread.cpp  RFCommSendThread.h  RFCommThread.cpp  RFCommThread.h  main.cpp
Pi/PyBlaster/: CMakeLists.txt  dbhandle.py  direntry.py  evalcmd.py  fileentry.py  led.py  log.py  main.py  playlist.py  playlistitem.py  playlistmanager.py  pyblaster.py  rfcommserver.py  settings.py  usbdevice.py  usbmanager.py  version.cmake
Pi/PyBlaster/cmake/debian/: postinst  prerm
Pi/PyBlaster/config/: CMakeLists.txt
Pi/PyBlaster/config/etc/default/: pyblaster
Pi/PyBlaster/config/etc/init.d/: pyblaster
Pi/PyBlaster/config/etc/profile.d/: zz_pyblaster_tmux.sh
Pi/PyBlaster/config/etc/pyblaster/: pyblaster.conf
Pi/PyBlaster/src/: CMakeLists.txt  alsamixer.py  buttons.py  codes.py  dbhandle.py  dirscanner.py  evalcmd.py  helpers.py  led.py  lircthread.py  log.py  main.py  play.py  playlistitem.py  playlistmanager.py  pyblaster.py  rfcommserver.py  settings.py  usbdevice.py  usbmanager.py
Pi/PyBlaster/testing/: led_button_test.py
Pi/PyBlaster2/: CMakeLists.txt
Pi/PyBlaster2/cmake/debian/: postinst
Pi/PyBlaster2/files/: CMakeLists.txt
Pi/PyBlaster2/python/: gpio.py  mpc.py  pyblaster2.py  settings.py
Pi/doc/: Install.txt  devel.txt
(+26 files in other folders)
